<resources>
    <string name="app_name">融云 IM</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="seal_login_text_new_user">新用户</string>
    <string name="seal_login_text_forget_password">找回密码</string>
    <string name="seal_login_text_login">登录</string>
    <string name="seal_login_countries_and_regions">国家/地区</string>
    <string name="seal_login_password">密码</string>
    <string name="seal_login_phone_number">手机号</string>
    <string name="seal_login_nick_name">昵称</string>
    <string name="seal_login_register">注册</string>
    <string name="seal_login_code">短信验证码</string>
    <string name="seal_login_send_code">发送验证码</string>
    <string name="seal_login_confirm">确认</string>
    <string name="seal_login_confirm_password">确认密码</string>
    <string name="seal_login_toast_name_is_null">昵称不能为空</string>
    <string name="seal_login_toast_name_contain_spaces">昵称不能包含空格</string>
    <string name="seal_login_toast_phone_number_is_null">手机号不能为空</string>
    <string name="seal_login_toast_code_is_null">验证码为空</string>
    <string name="seal_login_toast_password_is_null">密码不能为空</string>
    <string name="seal_login_toast_password_cannot_contain_spaces">密码不能包含空格</string>
    <string name="seal_login_toast_phone_or_psw_error">手机或者密码错误</string>
    <string name="seal_login_toast_success">"登录成功"</string>
    <string name="seal_login_toast_not_send_code">未向服务端获取验证码</string>
    <string name="seal_login_toast_passwords_invalid">密码必须为6-16位字符，区分大小写</string>
    <string name="seal_login_toast_new_password_not_null">新密码不能为空</string>
    <string name="seal_login_toast_confirm_password_not_null">确认密码不能为空</string>
    <string name="seal_login_toast_passwords_do_not_match">填写的确认密码与新密码不一致</string>
    <string name="login_error_send_message_frequency">短信发送频率超限</string>
    <string name="login_error_captcha_overdue">验证码过期,请重新请求</string>
    <string name="login_verification_code_error">验证码错误</string>
    <string name="seal_login_kick_by_other">您的账号在别的设备上登录，您被迫下线!</string>
    <string name="seal_login_connect_time_out">连接超时，请重新登录</string>
    <string name="seal_login_user_logout">该账号已销户！</string>
    <string name="seal_login_user_blocked">此账号被封禁！</string>
    <string name="common_chat_room">聊天室</string>
    <string name="discovery_chat_room_one">聊天室 I</string>
    <string name="discovery_chat_room_two">聊天室 II</string>
    <string name="discovery_chat_room_three">聊天室 III</string>
    <string name="discovery_chat_room_four">聊天室 IV</string>
    <string name="discovery_chat_room_join_failure">加入聊天室失败</string>
    <string name="discovery_chat_room_join_failure_by_kicked">你被禁止加入聊天室</string>
    <string name="discovery_join_chat_room_error">聊天室 ID 为空,请稍后重试</string>
    <string name="new_friends">新的朋友</string>
    <string name="group">群组</string>
    <string name="public_service">公众号</string>
    <string name="seal_search_nick_name">昵称： </string>
    <string name="seal_group_list_include">包含：</string>
    <string name="china">中国</string>
    <string name="lang_en">EN</string>
    <string name="lang_english">English</string>
    <string name="lang_arab">阿拉伯</string>
    <string name="lang_chs">简体中文</string>
    <string name="seal_search">搜索</string>
    <string name="beijing">北京</string>
    <string name="common_confirm">确认</string>
    <string name="common_cancel">取消</string>
    <string name="common_done">完成</string>
    <string name="common_save">保存</string>
    <string name="common_publish">发布</string>
    <string name="common_request_success">请求成功</string>
    <string name="common_add_successful">添加成功</string>
    <string name="common_remove_successful">移除成功</string>
    <string name="common_delete_successful">删除成功</string>
    <string name="common_album">相册</string>
    <string name="common_share_success">分享成功</string>
    <string name="common_share_failed">分享失败</string>
    <string name="common_member_count" formatted="true">%d 人</string>
    <string name="common_network_unavailable">当前网络不可用，请检查你的网络设置</string>
    <string name="common_network_check">请检查网络设置</string>
    <string-array name="tab_names_nomal">
        <item>消息</item>
        <item>通讯录</item>
        <item>聊天室</item>
        <item>我</item>
    </string-array>
    <string-array name="tab_names_ultra">
        <item>消息</item>
        <item>超级群</item>
        <item>通讯录</item>
        <item>聊天室</item>
        <item>我</item>
    </string-array>
    <string name="common_network_error_and_retry_after">网络问题请稍后重试</string>
    <string name="seal_evaluate_evaluation">评价</string>
    <string name="seal_evaluate_submit_evaluation">提交评价</string>
    <string name="seal_evaluate_resolved_title">请问客服是否解决了您的问题</string>
    <string name="seal_evaluate_resolved">已解决</string>
    <string name="seal_evaluate_unresolved">未解决</string>
    <string name="seal_evaluate_star_title">请您对客服进行评价</string>
    <string name="seal_evaluate_problem_title">存在哪些问题</string>
    <string name="seal_evaluate_title_select_must">存在哪些问题(必选)</string>
    <string name="seal_evaluate_lable_must">必须选择标签</string>
    <string name="seal_evaluate_input_must">必须输入建议</string>
    <string name="seal_conversation_remote_side_is_typing">对方正在输入&#046;&#046;&#046;</string>
    <string name="seal_conversation_remote_side_speaking">对方正在讲话&#046;&#046;&#046;</string>
    <string name="seal_conversation_title_discussion_group">讨论组</string>
    <string name="seal_conversation_title_system">系统消息助手</string>
    <string name="seal_conversation_title_feedback">意见反馈</string>
    <string name="seal_conversation_title_defult">聊天</string>
    <string name="seal_conversation_sub_group">"群组"</string>
    <string name="seal_conversation_sub_private">"我的私人会话"</string>
    <string name="seal_conversation_sub_discussion">"我的讨论组"</string>
    <string name="seal_conversation_sub_system">"系统消息"</string>
    <string name="seal_conversation_sub_defult">"聊天"</string>
    <string name="seal_conversation_read_receipt_detail">回执详情</string>
    <string name="seal_conversation_read_receipt_unread_persons_format">未读(%1$d)</string>
    <string name="seal_conversation_read_receipt_read_persons_format">已读(%1$d)</string>
    <string name="seal_conversation_read_receipt_no_person_read">全部未读</string>
    <string name="seal_conversation_read_receipt_no_person_unread">全部已读</string>
    <string name="seal_new_friend_list_no_data">暂无数据</string>
    <string name="seal_new_friend_agree">接&#160;&#160;&#160;受</string>
    <string name="seal_new_friend_agree_ignore">忽&#160;&#160;&#160;略</string>
    <string name="seal_new_friend_request">已请求</string>
    <string name="seal_new_friend_ignore">已忽略</string>
    <string name="seal_new_friend_added">已添加</string>
    <string name="seal_new_friend_deleted">已删除</string>
    <string name="seal_new_friend_add">添加</string>
    <string name="seal_main_title_start_chat">发起聊天</string>
    <string name="seal_main_title_create_group">创建群组</string>
    <string name="seal_main_title_add_friends">添加好友</string>
    <string name="seal_main_title_scan">扫一扫</string>
    <string name="seal_main_mine_set_account">账号设置</string>
    <string name="seal_main_mine_setting_language">多语言</string>
    <string name="seal_main_mine_setting_translation">翻译设置</string>
    <string name="seal_main_mine_proxy_setting">代理设置</string>
    <string name="seal_main_mine_proxy_setting_test_host">测试地址</string>
    <string name="seal_main_mine_proxy_setting_proxy_ip">代理 IP</string>
    <string name="seal_main_mine_proxy_setting_proxy_port">代理端口</string>
    <string name="seal_main_mine_proxy_setting_username">用户名</string>
    <string name="seal_main_mine_proxy_setting_password">密码</string>
    <string name="seal_main_mine_proxy_setting_test_proxy">测试代理</string>
    <string name="seal_main_mine_proxy_setting_save_proxy">保存代理</string>
    <string name="seal_main_mine_proxy_setting_clear_proxy">清除代理</string>
    <string name="seal_main_mine_feedback">意见反馈</string>
    <string name="seal_main_mine_about">关于融云 IM</string>
    <string name="seal_main_mine_customer_xn">小能客服</string>
    <string name="seal_main_mine_online_custom_service">在线客服</string>
    <string name="seal_userinfo_item_user_portrait">用户头像</string>
    <string name="seal_mine_set_account_change_password">密码修改</string>
    <string name="seal_mine_set_account_privacy">安全与隐私</string>
    <string name="seal_mine_set_account_new_message_show">新消息通知</string>
    <string name="seal_mine_set_account_clear_cache">清除缓存</string>
    <string name="seal_mine_set_account_chat_bg">聊天背景</string>
    <string name="seal_mine_set_account_clear_message_cache">清理聊天记录</string>
    <string name="seal_mine_set_account_logout">退出登录</string>
    <string name="seal_mine_set_account_delete">删除账户</string>
    <string name="seal_mine_set_account_push_language">设置 Push 中文</string>
    <string name="seal_mine_set_account_push_content">显示 Push 内容</string>
    <string name="seal_mine_set_account_push_message">接收 Push 消息</string>
    <string name="seal_mine_change_language">多语言</string>
    <string name="seal_mine_about_update_log">更新日志</string>
    <string name="seal_mine_about_function_introduce">功能介绍</string>
    <string name="seal_mine_about_rongcloud_web">官方网站</string>
    <string name="seal_mine_about_seal_talk_version">融云 IM 版本</string>
    <string name="seal_mine_about_sdk_version">SDK 版本</string>
    <string name="debug_mode_is_open">debug 模式已开启</string>
    <string name="seal_mine_about_close_debug_mode">关闭 debug 模式</string>
    <string name="seal_mine_about_debug_setting">设置</string>
    <string name="seal_mine_about_user_online_status">设置用户在线状态</string>
    <string name="seal_title_private_chat">发起聊天</string>
    <string name="seal_title_group_chat">创建群组</string>
    <string name="seal_title_add_contacts">添加好友</string>
    <string name="profile_search_message">查找聊天记录</string>
    <string name="profile_message_notice">消息免打扰</string>
    <string name="profile_set_top">会话置顶</string>
    <string name="profile_clean_message">清除聊天记录</string>
    <string name="profile_screen_shot_notification">截屏通知</string>
    <string name="profile_screen_shot_notification_tips">开启后，在对话中截屏，所有成员都是收到通知</string>
    <string name="profile_clean_timing">定时清理群消息</string>
    <string name="profile_clean_timing_tips">设置定时清理后，系统会定时清理规定时间前的群消息，清理后的消息无法恢复，请谨慎设置</string>
    <string name="profile_user_details">用户详情</string>
    <string name="profile_chat_details">聊天详情</string>
    <string name="profile_clean_private_chat_history">确定删除聊天记录吗</string>
    <string name="profile_clean_group_chat_history">确定删除群聊天记录吗</string>
    <string name="profile_clean_discussion_chat_history">确定删除讨论组聊天记录吗</string>
    <string name="profile_all_group_member">全部群成员</string>
    <string name="profile_group_member_online_status">群成员在线状态</string>
    <string name="profile_group_portrait">群组头像</string>
    <string name="profile_group_name">群组名称</string>
    <string name="profile_group_notice">群公告</string>
    <string name="profile_group_code">群二维码</string>
    <string name="profile_quit_group">删除并退出</string>
    <string name="profile_dismiss_group">解散并删除</string>
    <string name="profile_group_info">群组信息</string>
    <string name="profile_group_save_to_contact">保存到通讯录</string>
    <string name="seal_mine_my_account_portrait">头像</string>
    <string name="seal_mine_my_account_nickname">昵称</string>
    <string name="seal_mine_my_account_sknumber">融云 IM 号</string>
    <string name="seal_mine_my_account_gender">性别</string>
    <string name="seal_mine_my_account_phone_number">手机号</string>
    <string name="seal_privacy_blacklist">黑名单</string>
    <string name="seal_privacy_search_phone">允许通过手机号搜索到我</string>
    <string name="seal_privacy_search_st_account">允许通过融云 IM 号搜索到我</string>
    <string name="seal_privacy_friend_verify">加我为好友时需要验证</string>
    <string name="seal_privacy_group_verify">允许被直接添加至群聊</string>
    <string name="profile_group_qrcode">群二维码</string>
    <string name="profile_group_manager">群管理</string>
    <string name="profile_group_user_info">我在本群信息</string>
</resources>